# realms

./: .gitignore  README.md  com.github.marreitin.realms.yaml  distrobox.ini  meson.build  minimal.yml  windows.xml
data/icons/: meson.build  resources.gresource.xml
po/: POTFILES.in  (+1 more)
realms/: config.in  format.sh  main.py  meson.build  pylintrc  realms.gresource.xml  realms.in
realms/gtk/: UI.cmb  addconn.ui  adddev.ui  adddom.ui  addnet.ui  addpool.ui  addsecret.ui  addvol.ui  clonedom.ui  clonevm.ui  dhcphosts.ui  downloadvol.ui  inspectsnapshot.ui  takesnapshot.ui
realms/helpers/: __init__.py  async_jobs.py  callback.py  data_units.py  dropdown_header_factory.py  etree.py  ip_helpers.py  pretty_time.py  settings.py  show_domain_video.py  templates.py
realms/libvirt_wrap/: __init__.py  common.py  connection.py  constants.py  domain.py  domain_capabilities.py  driver_capabilities.py  event_manager.py  network.py  node_dev.py  pool.py  pool_capabilities.py  secret.py  volume.py
realms/templates/: README.md  linux.yml  windows.yml
realms/ui/: __init__.py  connection_row.py  main_window.py  window_reference.py
realms/ui/builders/: apply_row.py  bindable_entries.py  common.py  network_chooser.py  select_dialog.py  volume_chooser.py  xml_view.py
realms/ui/builders/conn/: __init__.py  conn_details_page.py  conn_perf_page.py  secrets_details_page.py
realms/ui/components/: __init__.py  apply_row.py  common.py  generic_preferences_row.py  preference_widgets.py  volume_chooser.py  xml_view.py
realms/ui/dialogs/: add_conn_dialog.py  add_device_dialog.py  add_domain_dialog.py  add_net_dialog.py  add_pool_dialog.py  add_volume_dialog.py  clone_domain_dialog.py  dhcphosts_dialog.py  download_volume_dialog.py  inspect_snapshot_dialog.py  secret_dialog.py  take_snapshot_dialog.py
realms/ui/rows/: __init__.py  base_row.py  domain_row.py  network_row.py  pool_row.py  row_sorting.py
realms/ui/tabs/: __init__.py  base_details.py  conn_details.py  domain_details.py  edit_templates.py  network_details.py  pool_details.py
(+119 files in other folders)
